<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- WRAPPER LAYOUT FOR GIF AND TEXT VIEW -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_border"
            android:orientation="horizontal" >

            <!-- GIF -->
            <edu.glyndwr.tools.AnimatedView
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <!-- BRIEF EXPLONATION OF DIALOG IN TEXT VIEW -->
            <TextView
                android:id="@+id/dialog_emergency_textview_backupnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="25dp"
                android:text="@string/backup_number"
                android:textColor="#388E8E"
                android:textSize="15dp"
                android:textStyle="italic|bold" />
        </LinearLayout>

        <!-- ADDITION NUMBER EDIT TEXT -->
        <EditText
            android:id="@+id/dialog_emergency_edittext_phone_number"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.54"
            android:hint="@string/hint_emergency_phone_number"
            android:inputType="phone"
            android:textColor="#388E8E"
            android:textStyle="bold" />

        <!-- BOTTOM OK/CANCEL BLOCK -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <!-- CANCEL BUTTON -->
            <Button
                android:id="@+id/dialog_emergency_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel" />

            <!-- OK BUTTON -->
            <Button
                android:id="@+id/dialog_emergency_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>